add AWS and arXiv methods

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ requires-python = ">=3.12"
 dependencies = [
     "Pillow",
     "xmltodict",
-]
+    "matplotlib",
+    ]
 
 [project.optional-dependencies]
 test = [
