--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "arxiv-bucket"
 version = "0.1.0"
-description = "arxiv-bucket"
+description = "Python tool for accessing, validating, and processing arXiv bulk data from AWS S3"
 authors = [{name = "Jason Stuber"}]
 license = {text = "MIT"}
 readme = "README.md"
