--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -e ".[test]"
 
-      - name: Run tests with coverage
-        run: pytest --cov=.
-
+      - name: Run tests with 100% coverage gate
+        run: |
+          pytest --cov=. \
+                 --cov-report=term-missing \
+                 --cov-report=xml \
+                 --cov-fail-under=100
